# rust-firebase-be

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
